--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
 @import "./utils/variables";
-@import "./utils/placeholders";
 @import "./base/normalize";
 @import "./base/fonts";
 @import "./base/common";
@@ -14,3 +13,4 @@
 @import "./layouts/our-team";
 @import "./layouts/customers";
 @import "./layouts/footer";
+@import "./layouts/menu-container";
