--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-.advantage, .services, .personnel.list, .container-cust {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -360,9 +352,26 @@ a.link {
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 body {
@@ -375,15 +384,20 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+  }
 }
 
 .section.services {
   padding-top: 0px;
 }
 
-/* for h2 */
 .section-title {
   color: #212121;
   font-weight: bold;
@@ -391,10 +405,15 @@ body {
   line-height: 1.17;
   text-align: center;
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
-/* for h3 */
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
+}
+
 .title {
   color: #212121;
   font-size: 14px;
@@ -402,6 +421,12 @@ body {
   text-transform: uppercase;
   margin-top: 30px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    text-align: center;
+  }
 }
 
 .visually-hidden {
@@ -455,6 +480,28 @@ img {
   margin-left: 8px;
 }
 
+.button-menu {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
+  border: none;
+}
+
+.button-menu .icon-menu {
+  display: none;
+}
+
+.button-menu.is-open .icon-menu {
+  display: block;
+}
+
+.button-menu.is-open .icon-close {
+  display: none;
+}
+
 .logo {
   color: #000000;
   font-family: "Raleway", sans-serif;
@@ -462,9 +509,23 @@ img {
   font-size: 26px;
   line-height: 1.19;
   display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .accent-logo {
@@ -473,6 +534,7 @@ img {
 
 .address-container .logo {
   padding-top: 0px;
+  padding-bottom: 20px;
 }
 
 .backdrop {
@@ -757,6 +819,45 @@ textarea {
   color: #ffffff;
 }
 
+.link-list {
+  margin: 0px;
+  padding-left: 0px;
+  padding-bottom: 24px;
+  list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .link-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.link-list.social-foot {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .link-list.social-foot {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .site-nav.list,
+  .contacts.list {
+    display: none;
+  }
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -764,6 +865,10 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
 }
 
 .container.header {
@@ -775,7 +880,12 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 85px;
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    margin-left: 85px;
+  }
 }
 
 .site-nav .item + .item {
@@ -819,15 +929,16 @@ textarea {
   position: relative;
 }
 
-.contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts .item + .item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+  }
+  .contacts .item + .item {
+    margin-left: 30px;
+  }
 }
 
 .contacts .link {
@@ -887,13 +998,34 @@ p {
   margin: 0px;
 }
 
-.advantage .items {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .advantage {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
-.advantage .items:nth-child(4n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .advantage .items {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantage .items {
+    width: calc((100% - 4 * 30px) / 4);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .advantage .items:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .advantage .items:before {
@@ -922,6 +1054,20 @@ p {
 
 .advantage .icon-astronaut::before {
   background-image: url(../images/astronaut.svg);
+}
+
+.services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media screen and (max-width: 1199px) {
+  .services {
+    display: none;
+  }
 }
 
 .services .title {
@@ -964,6 +1110,17 @@ p {
   background: #f5f4fa;
 }
 
+@media screen and (min-width: 768px) {
+  .personnel.list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .personnel.list .text {
   font-size: 16px;
   line-height: 1.19;
@@ -972,17 +1129,29 @@ p {
 }
 
 .personnel.list .item {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
-  /* background-color: steelblue; */
 }
 
-.personnel.list .item:nth-child(4n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .personnel.list .item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .personnel.list .item {
+    width: calc((100% - 4 * 30px) / 4);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .personnel.list .item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .title-lower {
@@ -995,14 +1164,30 @@ p {
   margin-bottom: 10px;
 }
 
-.container-cust .item {
-  width: calc((100% - 150px) / 6);
-  margin-right: 30px;
-  height: 90px;
+.container-cust {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
 }
 
-.container-cust .item:nth-child(6n) {
-  margin-right: 0px;
+.container-cust .item {
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .container-cust .item {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-cust .item {
+    width: calc((100% - 6 * 30px) / 6);
+  }
 }
 
 .item-cust {
@@ -1036,6 +1221,7 @@ p {
 footer {
   color: #ffffff;
   background: #2f303a;
+  text-align: center;
 }
 
 footer .title {
@@ -1045,69 +1231,58 @@ footer .title {
 }
 
 .container-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
   padding: 60px 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .container-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .address-container {
-  width: 270px;
   margin-right: 30px;
   display: inline-block;
   margin-bottom: 9px;
+  margin-bottom: 60px;
 }
 
 address {
   font-style: normal;
 }
 
-address .link {
-  display: inline-block;
-  margin-top: 9px;
+@media screen and (min-width: 1200px) {
+  address .link {
+    display: inline-block;
+    margin-top: 9px;
+  }
 }
 
 .link-container {
-  width: 270px;
   margin-right: 30px;
+  margin-bottom: 60px;
 }
 
 .link-container .title {
   margin-top: 0px;
 }
 
-.link-list {
-  margin: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 0px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 24px;
-  list-style: none;
-}
-
-.link-list.social-foot {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-}
-
 .address.link {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.container-fotter .logo {
-  padding: 0px;
-  margin-bottom: 20px;
+@media screen and (min-width: 1200px) {
+  .container-fotter .logo {
+    padding: 0px;
+    margin-bottom: 20px;
+  }
 }
 
 .subscription .title {
@@ -1129,7 +1304,7 @@ address .link {
 }
 
 .input-email {
-  width: 358px;
+  width: 100%;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-sizing: border-box;
@@ -1142,6 +1317,95 @@ address .link {
   line-height: 1.25;
   letter-spacing: 0.03em;
   padding: 15px 16px 15px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .input-email {
+    margin-right: 10px;
+    width: 358px;
+  }
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding-bottom: 60px;
+  padding-top: 60px;
+  text-align: center;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
+.site-menu .link {
+  display: block;
+  padding-bottom: 40px;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-menu .link:hover, .site-menu .link:focus {
+  color: #2196f3;
+}
+
+.site-menu .link.current {
+  color: #2196f3;
+}
+
+.site-menu .link.current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.contacts-menu .link {
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-menu .link:hover, .contacts-menu .link:focus {
+  color: #2196f3;
+}
+
+.icon-contact {
   margin-right: 10px;
+  fill: #757575;
+  vertical-align: middle;
+}
+
+.contacts-menu .link:hover .icon-contact,
+.contacts-menu .link:focus .icon-contact {
+  fill: #2196f3;
+}
+
+.item.menu {
+  padding-bottom: 16px;
+}
+
+.item.menu:last-child {
+  padding-bottom: 0px;
 }
 /*# sourceMappingURL=main.css.map */
