--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,11 +1,3 @@
-.card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -360,9 +352,26 @@ a.link {
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 body {
@@ -375,15 +384,20 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+  }
 }
 
 .section.services {
   padding-top: 0px;
 }
 
-/* for h2 */
 .section-title {
   color: #212121;
   font-weight: bold;
@@ -391,10 +405,15 @@ body {
   line-height: 1.17;
   text-align: center;
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
-/* for h3 */
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
+}
+
 .title {
   color: #212121;
   font-size: 14px;
@@ -402,6 +421,12 @@ body {
   text-transform: uppercase;
   margin-top: 30px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    text-align: center;
+  }
 }
 
 .visually-hidden {
@@ -455,6 +480,28 @@ img {
   margin-left: 8px;
 }
 
+.button-menu {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
+  border: none;
+}
+
+.button-menu .icon-menu {
+  display: none;
+}
+
+.button-menu.is-open .icon-menu {
+  display: block;
+}
+
+.button-menu.is-open .icon-close {
+  display: none;
+}
+
 .logo {
   color: #000000;
   font-family: "Raleway", sans-serif;
@@ -462,9 +509,23 @@ img {
   font-size: 26px;
   line-height: 1.19;
   display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .accent-logo {
@@ -473,6 +534,7 @@ img {
 
 .address-container .logo {
   padding-top: 0px;
+  padding-bottom: 20px;
 }
 
 .social-item:not(:last-child) {
@@ -516,6 +578,45 @@ img {
   color: #ffffff;
 }
 
+.link-list {
+  margin: 0px;
+  padding-left: 0px;
+  padding-bottom: 24px;
+  list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .link-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.link-list.social-foot {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .link-list.social-foot {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .site-nav.list,
+  .contacts.list {
+    display: none;
+  }
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -523,6 +624,10 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
 }
 
 .container.header {
@@ -534,7 +639,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 85px;
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    margin-left: 85px;
+  }
 }
 
 .site-nav .item + .item {
@@ -578,15 +688,16 @@ img {
   position: relative;
 }
 
-.contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts .item + .item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+  }
+  .contacts .item + .item {
+    margin-left: 30px;
+  }
 }
 
 .contacts .link {
@@ -619,12 +730,48 @@ img {
 }
 
 .portfolio .container {
-  padding-top: 93px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio .container {
+    padding-top: 93px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter-section {
-  padding-bottom: 50px;
+  padding-bottom: 0px;
+}
+
+.filter.list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.filter.list .item {
+  padding-right: 8px;
+  padding-bottom: 15px;
+}
+
+.filter.list .item:nth-child(n + 4) {
+  padding-bottom: 23px;
+}
+
+@media screen and (min-width: 768px) {
+  .filter.list .item {
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter.list .item {
+    padding-bottom: 50px;
+  }
 }
 
 .project-section {
@@ -645,18 +792,19 @@ img {
   color: #eeeeee;
 }
 
-.filter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  /* padding-top: 0px; */
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.filter .item + .item {
-  margin-left: 8px;
+@media screen and (min-width: 768px) {
+  .filter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* padding-top: 0px; */
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .filter .item + .item {
+    margin-left: 8px;
+  }
 }
 
 .card .link {
@@ -691,9 +839,22 @@ img {
   color: #212121;
 }
 
+.card {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .card-list {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
   margin-bottom: 30px;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -706,8 +867,22 @@ img {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card .card-list:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .card-list {
+    width: calc((100% - 30px) / 2);
+  }
+  .card-list .card .card-list:nth-child(2n) {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-list {
+    width: calc((100% - 60px) / 3);
+  }
+  .card-list .card .card-list:nth-child(3n) {
+    margin-right: 0px;
+  }
 }
 
 .project-name {
@@ -771,6 +946,7 @@ img {
 footer {
   color: #ffffff;
   background: #2f303a;
+  text-align: center;
 }
 
 footer .title {
@@ -780,69 +956,58 @@ footer .title {
 }
 
 .container-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
   padding: 60px 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .container-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .address-container {
-  width: 270px;
   margin-right: 30px;
   display: inline-block;
   margin-bottom: 9px;
+  margin-bottom: 60px;
 }
 
 address {
   font-style: normal;
 }
 
-address .link {
-  display: inline-block;
-  margin-top: 9px;
+@media screen and (min-width: 1200px) {
+  address .link {
+    display: inline-block;
+    margin-top: 9px;
+  }
 }
 
 .link-container {
-  width: 270px;
   margin-right: 30px;
+  margin-bottom: 60px;
 }
 
 .link-container .title {
   margin-top: 0px;
 }
 
-.link-list {
-  margin: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 0px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 24px;
-  list-style: none;
-}
-
-.link-list.social-foot {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-}
-
 .address.link {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.container-fotter .logo {
-  padding: 0px;
-  margin-bottom: 20px;
+@media screen and (min-width: 1200px) {
+  .container-fotter .logo {
+    padding: 0px;
+    margin-bottom: 20px;
+  }
 }
 
 .subscription .title {
@@ -864,7 +1029,7 @@ address .link {
 }
 
 .input-email {
-  width: 358px;
+  width: 100%;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-sizing: border-box;
@@ -877,6 +1042,13 @@ address .link {
   line-height: 1.25;
   letter-spacing: 0.03em;
   padding: 15px 16px 15px;
-  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .input-email {
+    margin-right: 10px;
+    width: 358px;
+  }
 }
 /*# sourceMappingURL=portfolio.css.map */
