--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -30,9 +30,19 @@ a.link {
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
+  // padding-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 body {
@@ -44,13 +54,17 @@ body {
   line-height: 1.71;
 }
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+  }
 }
 .section.services {
   padding-top: 0px;
 }
-/* for h2 */
+// /* for h2 */
 .section-title {
   color: $title-text-color;
   font-weight: bold;
@@ -58,10 +72,14 @@ body {
   line-height: 1.17;
   text-align: center;
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
-/* for h3 */
+// /* for h3 */
 .title {
   color: $title-text-color;
   font-size: 14px;
@@ -69,6 +87,10 @@ body {
   text-transform: uppercase;
   margin-top: 30px;
   margin-bottom: 10px;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .visually-hidden {
