--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -26,3 +26,41 @@
     margin-left: 8px;
   }
 }
+.button-menu {
+  display: inline-flex;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
+  border: none;
+
+  .icon-menu {
+    display: none;
+  }
+  &.is-open .icon-menu {
+    display: block;
+  }
+  &.is-open .icon-close {
+    display: none;
+  }
+
+  // @media screen and (min-width: 767px) {
+  //   display: none;
+  // }
+}
+
+// .button-menu {
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover .icon-menu,
+//   &:focus .icon-menu {
+//     fill: $accent-color;
+//   }
+// }
+// .button-menu {
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover .icon-close,
+//   &:focus .icon-close {
+//     fill: $accent-color;
+//   }
+// }
