--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,9 +5,19 @@
   font-size: 26px;
   line-height: 1.19;
   display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .accent-logo {
@@ -16,4 +26,5 @@
 
 .address-container .logo {
   padding-top: 0px;
+  padding-bottom: 20px;
 }
