--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -1,15 +1,22 @@
 .container-cust {
-  @extend %flex-container;
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
 }
 .container-cust .item {
-  width: calc((100% - 150px) / 6);
-  margin-right: 30px;
-  height: 90px;
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
+  // height: 90px;
 
-  &:nth-child(6n) {
-    margin-right: 0px;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 6 * 30px) / 6);
   }
 }
+
 .item-cust {
   display: flex;
   height: 90px;
