--- a/sass/layouts/_menu-container.scss
+++ b/sass/layouts/_menu-container.scss
@@ -1,36 +1,22 @@
-.site-nav.list,
-.contacts.list {
-  @media screen and (max-width: 768px) {
-    display: none;
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: $white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding-bottom: 60px;
+  padding-top: 60px;
+  text-align: center;
+  &.is-open {
+    display: block;
   }
 }
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-}
-.container.header {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.site-nav {
-  display: flex;
-
-  @media screen and (min-width: 1200px) {
-    margin-left: 85px;
-  }
-
-  .item + .item {
-    margin-left: 50px;
-  }
-}
-
-.site-nav .link {
+.site-menu .link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-bottom: 40px;
 
   color: $title-text-color;
   font-weight: 500;
@@ -46,12 +32,11 @@
   }
 }
 
-.site-nav .link.current {
+.site-menu .link.current {
   color: $accent-color;
 
   &::after {
     content: "";
-    position: absolute;
     display: block;
     width: 100%;
     height: 4px;
@@ -63,20 +48,7 @@
   }
 }
 
-.link.current {
-  position: relative;
-}
-.contacts {
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-left: auto;
-    .item + .item {
-      margin-left: 30px;
-    }
-  }
-}
-
-.contacts .link {
+.contacts-menu .link {
   color: $primery-text-color;
   font-weight: 500;
   font-size: 14px;
@@ -96,8 +68,15 @@
   fill: $primery-text-color;
   vertical-align: middle;
 
-  .contacts .link:hover &,
-  .contacts .link:focus & {
+  .contacts-menu .link:hover &,
+  .contacts-menu .link:focus & {
     fill: $accent-color;
   }
+}
+
+.item.menu {
+  padding-bottom: 16px;
+}
+.item.menu:last-child {
+  padding-bottom: 0px;
 }
