--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -3,7 +3,11 @@
 }
 
 .personnel.list {
-  @extend %flex-container;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 
   .text {
     font-size: 16px;
@@ -13,16 +17,24 @@
   }
 }
 .personnel.list .item {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: $white;
-  /* background-color: steelblue; */
 
-  &:nth-child(4n) {
-    margin-right: 0px;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 4 * 30px) / 4);
+  }
+
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
   }
 }
 
