--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -3,12 +3,38 @@
 }
 
 .portfolio .container {
-  padding-top: 93px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 93px;
+    padding-bottom: 94px;
+  }
 }
 .filter-section {
-  padding-bottom: 50px;
+  padding-bottom: 0px;
 }
+
+.filter.list {
+  display: flex;
+  flex-wrap: wrap;
+
+  & .item {
+    padding-right: 8px;
+    padding-bottom: 15px;
+    &:nth-child(n + 4) {
+      padding-bottom: 23px;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 50px;
+    }
+  }
+}
+
 .project-section {
   padding-top: 0px;
 }
@@ -29,11 +55,13 @@
 }
 
 .filter {
-  display: flex;
-  /* padding-top: 0px; */
-  justify-content: center;
-  .item + .item {
-    margin-left: 8px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    /* padding-top: 0px; */
+    justify-content: center;
+    .item + .item {
+      margin-left: 8px;
+    }
   }
 }
 
@@ -67,11 +95,15 @@
   color: $title-text-color;
 }
 .card {
-  @extend %flex-container;
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .card-list {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
+  // margin-right: 30px;
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -80,9 +112,20 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-}
-.card .card-list:nth-child(3n) {
-  margin-right: 0px;
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+    .card .card-list:nth-child(2n) {
+      margin-right: 0px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
+    .card .card-list:nth-child(3n) {
+      margin-right: 0px;
+    }
+  }
 }
 
 .project-name {
