--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,10 @@ body {
   line-height: 1.71;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -488,6 +492,7 @@ img {
   padding: 0px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .button-menu .icon-menu {
@@ -500,6 +505,21 @@ img {
 
 .button-menu.is-open .icon-close {
   display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .button-menu {
+    display: none;
+  }
+}
+
+.input {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:hover, .input:focus {
+  fill: #2196f3;
 }
 
 .logo {
@@ -548,6 +568,8 @@ img {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 93px 15px 94px 15px;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -565,39 +587,62 @@ img {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   background-color: #ffffff;
   font-size: 12px;
   letter-spacing: 0.01em;
   line-height: 1.17;
-  min-width: 528px;
-  min-height: 581px;
   padding: 40px;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 481px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 450px;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 
 .modal-title {
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.05px;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
+}
+
 .modal-forms {
-  min-width: 448px;
   padding: 0px;
-  margin-top: 0px;
-  margin-bottom: 20px;
-  margin-top: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-forms {
+    min-width: 448px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-top: 12px;
+  }
 }
 
 .modal-close {
@@ -642,11 +687,17 @@ textarea {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: start;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .field-form {
+    margin-bottom: 10px;
+  }
 }
 
 .field-form:focus-within {
@@ -656,10 +707,17 @@ textarea {
 }
 
 .field-form-checkbox {
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
+  font-size: 12px;
+  line-height: 1.17;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .field-form-checkbox {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .field-form .input-form {
@@ -684,10 +742,16 @@ textarea {
     fill: $accent-color;
   } */
 .field-form .textarea-form {
-  padding: 11px 12px 11px;
+  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-top: 4px;
+}
+
+@media screen and (min-width: 1200px) {
+  .field-form .textarea-form {
+    padding: 11px 12px 11px;
+  }
 }
 
 .field-form .textarea-form:focus-within {
@@ -858,7 +922,13 @@ textarea {
   }
 }
 
-.header {
+header {
+  position: relative;
+}
+
+.container.header {
+  padding-top: 0px;
+  padding-bottom: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -868,12 +938,6 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
-}
-
-.container.header {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 
 .site-nav {
@@ -1233,6 +1297,7 @@ footer .title {
 .container-footer {
   margin-right: auto;
   margin-left: auto;
+  max-width: 1200px;
   padding: 60px 15px;
 }
 
@@ -1241,16 +1306,27 @@ footer .title {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding-top: 60px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
   }
 }
 
 .address-container {
-  margin-right: 30px;
   display: inline-block;
-  margin-bottom: 9px;
   margin-bottom: 60px;
 }
 
@@ -1266,7 +1342,6 @@ address {
 }
 
 .link-container {
-  margin-right: 30px;
   margin-bottom: 60px;
 }
 
@@ -1339,15 +1414,26 @@ address {
   padding-bottom: 60px;
   padding-top: 60px;
   text-align: center;
+  z-index: 99;
 }
 
 .menu-container.is-open {
   display: block;
 }
 
+@media screen and (min-width: 767px) {
+  .menu-container.is-open {
+    display: none;
+  }
+}
+
+.site-menu {
+  padding-bottom: 60px;
+}
+
 .site-menu .link {
-  display: block;
-  padding-bottom: 40px;
+  position: relative;
+  padding-bottom: 8px;
   color: #212121;
   font-weight: 500;
   font-size: 14px;
@@ -1367,7 +1453,7 @@ address {
 
 .site-menu .link.current::after {
   content: "";
-  display: block;
+  position: absolute;
   width: 100%;
   height: 4px;
   background: #2196f3;
