--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -383,6 +383,10 @@ body {
   line-height: 1.71;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -488,6 +492,7 @@ img {
   padding: 0px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .button-menu .icon-menu {
@@ -500,6 +505,21 @@ img {
 
 .button-menu.is-open .icon-close {
   display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .button-menu {
+    display: none;
+  }
+}
+
+.input {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:hover, .input:focus {
+  fill: #2196f3;
 }
 
 .logo {
@@ -617,7 +637,13 @@ img {
   }
 }
 
-.header {
+header {
+  position: relative;
+}
+
+.container.header {
+  padding-top: 0px;
+  padding-bottom: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -627,12 +653,6 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
-}
-
-.container.header {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 
 .site-nav {
@@ -958,6 +978,7 @@ footer .title {
 .container-footer {
   margin-right: auto;
   margin-left: auto;
+  max-width: 1200px;
   padding: 60px 15px;
 }
 
@@ -966,16 +987,27 @@ footer .title {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding-top: 60px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
   }
 }
 
 .address-container {
-  margin-right: 30px;
   display: inline-block;
-  margin-bottom: 9px;
   margin-bottom: 60px;
 }
 
@@ -991,7 +1023,6 @@ address {
 }
 
 .link-container {
-  margin-right: 30px;
   margin-bottom: 60px;
 }
 
@@ -1050,5 +1081,98 @@ address {
     margin-right: 10px;
     width: 358px;
   }
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding-bottom: 60px;
+  padding-top: 60px;
+  text-align: center;
+  z-index: 99;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
+@media screen and (min-width: 767px) {
+  .menu-container.is-open {
+    display: none;
+  }
+}
+
+.site-menu {
+  padding-bottom: 60px;
+}
+
+.site-menu .link {
+  position: relative;
+  padding-bottom: 8px;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-menu .link:hover, .site-menu .link:focus {
+  color: #2196f3;
+}
+
+.site-menu .link.current {
+  color: #2196f3;
+}
+
+.site-menu .link.current::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.contacts-menu .link {
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-menu .link:hover, .contacts-menu .link:focus {
+  color: #2196f3;
+}
+
+.icon-contact {
+  margin-right: 10px;
+  fill: #757575;
+  vertical-align: middle;
+}
+
+.contacts-menu .link:hover .icon-contact,
+.contacts-menu .link:focus .icon-contact {
+  fill: #2196f3;
+}
+
+.item.menu {
+  padding-bottom: 16px;
+}
+
+.item.menu:last-child {
+  padding-bottom: 0px;
 }
 /*# sourceMappingURL=portfolio.css.map */
