--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -53,6 +53,11 @@ body {
   font-size: 14px;
   line-height: 1.71;
 }
+
+body.modal-open {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
