--- a/sass/layouts/_menu-container.scss
+++ b/sass/layouts/_menu-container.scss
@@ -10,13 +10,23 @@
   padding-bottom: 60px;
   padding-top: 60px;
   text-align: center;
+  z-index: 99;
+
   &.is-open {
     display: block;
+
+    @media screen and (min-width: 767px) {
+      display: none;
+    }
   }
 }
+.site-menu {
+  padding-bottom: 60px;
+}
+
 .site-menu .link {
-  display: block;
-  padding-bottom: 40px;
+  position: relative;
+  padding-bottom: 8px;
 
   color: $title-text-color;
   font-weight: 500;
@@ -37,7 +47,7 @@
 
   &::after {
     content: "";
-    display: block;
+    position: absolute;
     width: 100%;
     height: 4px;
     background: $accent-color;
